# js-toxcore-c

./: .gitignore  .travis.yml  BUILD.bazel  Changelog.md  Gruntfile.js  README.md  package-lock.json  package.json
.github/: dependabot.yml  settings.yml
.github/workflows/: ci.yaml
examples/: .snyk  package.json
lib/: consts.js  errors.js  events.js  main.js  tox.js  tox_old.js  toxencryptsave.js  toxerror.js  toxoptions.js  util.js
test/: BUILD.bazel  tox.js  toxencryptsave.js  util.js
tools/: install-deps.sh
typings/: toxcore.d.ts
