#load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//tools/project:build_defs.bzl", "project")

project()

#exports_files(srcs = ["package.json"])
#
#nodejs_binary(
#    name = "js-toxcore-c",
#    entry_point = "lib/main.js",
#    visibility = ["//visibility:public"],
#    deps = ["@yarn_modules//:_all_"],
#)
